# tyra-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  ADDING_PROVIDERS.md  API.md  ARCHITECTURE.md  CLAUDE.md  CONFIGURATION.md  DOC_INGESTION_REFACTOR_ENHANCED.md  FINAL_VALIDATION_REPORT.md  INSTALLATION.md  MULTI_AGENT_PATTERNS.md  Makefile  PLANNING.md  PROJECT_STRUCTURE_REPORT.md  PROVIDERS.md  README.md  SWAPPING_COMPONENTS.md  TASK.md  TELEMETRY.md  TYRA_INTEGRATION.md  UPDATE_MODEL_INSTALLATION.md  main.py  project directive.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_config_only.py  test_mcp_server.py  test_server.py
config/: agents.yaml  config.yaml  graphiti.yaml  models.yaml  observability.yaml  providers.yaml  self_learning.yaml
docker/: Dockerfile  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: default.conf  nginx.conf
docker/scripts/: logrotate.conf
docs/: CONFIG_MIGRATION.md  CONTAINERS.md  N8N_INTEGRATION.md  PROVIDER_REGISTRY.md  SETUP.md
examples/n8n-workflows/: CRAWL4AI_SETUP.md  README.md  crawl4ai-web-scraper-memory.json  customer-support-context.json  document-batch-processor.json  email-context-search.json  web-scraper-memory-store.json
scripts/: README.md  add_provider.py  backup.sh  config_migrate.py  init_memgraph.cypher  init_memgraph.sh  init_postgres.sql  init_redis.sh  install_dependencies.sh  install_memgraph.sh  install_pgvector.sh  install_redis.sh  migrate_config.py  run_mcp_tests.py  setup.sh  setup_databases.sh  test_cross_encoder.py  test_databases.sh  test_embedding_model.py  test_model_pipeline.py  validate_config.py
scripts/db/: backup_databases.sh  setup_databases.sh
scripts/deploy/: backup.sh  blue-green.sh  migrate.sh  monitoring-setup.sh  provider-swap.sh  rollback.sh  setup.sh  update.sh
scripts/migrations/: version_manager.py
scripts/migrations/config/: 001_initial_config.py  002_add_observability.py  003_add_self_learning.py  004_add_trading_safety.py  __init__.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/middleware/: __init__.py  auth.py  error_handler.py  rate_limit.py
src/api/routes/: admin.py  analytics.py  chat.py  graph.py  health.py  ingestion.py  memory.py  rag.py  search.py  webhooks.py
src/clients/: memory_client.py
src/core/adaptation/: __init__.py  ab_testing.py  learning_engine.py  memory_health.py  prompt_evolution.py  self_training_scheduler.py
src/core/agents/: __init__.py  agent_logger.py  claude_integration.py  session_manager.py
src/core/analytics/: __init__.py  config_optimizer.py  memory_health.py  performance_tracker.py
src/core/cache/: __init__.py  cache_manager.py  redis_cache.py
src/core/embeddings/: __init__.py  manager.py  models.py
src/core/graph/: __init__.py  enhanced_graph_client.py  graphiti_integration.py  memgraph_client.py
src/core/ingestion/: __init__.py  chunking_strategies.py  document_processor.py  file_loaders.py  llm_context_enhancer.py
src/core/interfaces/: embeddings.py  graph_engine.py  hallucination_detector.py  reranker.py  vector_store.py
src/core/memory/: manager.py  models.py  postgres_client.py  retriever.py
src/core/observability/: __init__.py  metrics.py  performance_optimized_telemetry.py  telemetry.py  telemetry_optimizer.py  tracing.py
src/core/providers/embeddings/: __init__.py  embedder.py  huggingface.py  registry.py
src/core/providers/graph_engines/: __init__.py  memgraph.py  registry.py
src/core/providers/rerankers/: __init__.py  cross_encoder.py  registry.py
src/core/providers/vector_stores/: __init__.py  pgvector.py  registry.py
src/core/rag/: hallucination_detector.py  reranker.py  retrieval.py  scorer.py  vllm_reranker.py
src/core/schemas/: ingestion.py
src/core/utils/: circuit_breaker.py  config.py  database.py  logger.py  registry.py  simple_config.py  simple_logger.py
src/mcp/: __init__.py  server.py  tools.py  transport.py
src/migrations/sql/: 001_initial_schema.sql  002_analytics_schema.sql
tests/: test_basic.py  test_cache_manager.py  test_circuit_breaker.py  test_embeddings.py  test_graph_engine.py  test_hallucination_detector.py  test_ingestion.py  test_interface_validation.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_simple.py  test_mcp_trading_safety.py  test_memory_manager.py  test_performance_tracker.py  test_phase2_config.py  test_reranking.py  test_vllm_reranker.py
tests/integration/: test_end_to_end_workflows.py  test_graph_integration.py  test_provider_integration.py
tests/integration/api/: test_memory_endpoints.py
tests/performance/: __init__.py
tests/stress/: __init__.py
tests/unit/core/: test_embeddings.py  test_hallucination_detector.py  test_memory_manager.py
